--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="qr-section">
             <div class="content">
                 <div class="col-24 head-block-1 mb-4">
-                    <h3>Nb designing studios v-card</h3>
+                    <h3>NB Designing Studios v-card</h3>
                 </div>
                 <div class="col-24 text-block-1">
                     <p>Scan the QR Code and have a look</p>
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="image-block-1">
-                <img src="./images/Karan-Khemani.png" class="card-img-top img-1" alt="...">
+                <img src="./images/nb-qr.png" class="card-img-top img-1" alt="...">
             </div>
         </div>
     </div>
