--- a/virtual-card.html
+++ b/virtual-card.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
     <!-- Title of Website -->
-    <title>Karan Khemani &ndash; Virtual Card</title>
+    <title>NB Designing Studios &ndash; Virtual Card</title>
 
     <meta name="description" content="Coming Soon Landing Page" />
     <meta name="keywords" content="" />
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="qr-section-1">
             <div class="image-block-2 mb-12">
-                <img src="./images/profile.jpg" alt="">
+                <img src="./images/file.jpg" alt="">
             </div>
             <!-- Social 1 -->
             <div class="social-media">
@@ -54,7 +54,7 @@
                     <h4>Social Media Presence</h4>
                 </div>
                 <div class="block">
-                    <a href="https://www.facebook.com/karan.khemani.10?mibextid=ZbWKwL" target="_blank">
+                    <a href="#">
                         <button type="button" class="btn">
                             <div class="image-block-3">
                                 <img src="./images/face.png" alt="">
@@ -64,7 +64,7 @@
                             </span>
                         </button>
                     </a>
-                    <a href="https://instagram.com/karankhemani_music?igshid=MzRlODBiNWFlZA==" target="_blank">
+                    <a href="https://www.instagram.com/nb_designing.studio?igsh=MWdqbjJpYm1oanJzbA%3D%3D" target="_blank">
                         <button type="button" class="btn">
                             <div class="image-block-3">
                                 <img src="./images/insta.png" alt="">
@@ -74,7 +74,7 @@
                             </span>
                         </button>
                     </a>
-                    <a href="https://youtube.com/@youngstarkarankhemani7487?si=i7T4pYiz8nfRaVnB" target="_blank">
+                    <a href="#" target="_blank">
                         <button type="button" class="btn">
                             <div class="image-block-3">
                                 <img src="./images/you.png" alt="">
@@ -93,7 +93,7 @@
                     <h4>Other Contact Details</h4>
                 </div>
                 <div class="block">
-                    <a href="tel:+918888070845">
+                    <a href="tel:+919730004102">
                         <button type="button" class="btn">
                             <div class="image-block-3">
                                 <img src="./images/phone.png" alt="">
@@ -103,7 +103,7 @@
                             </span>
                         </button>
                     </a>
-                    <a href="website.html" target="_blank">
+                    <a href="#" target="_blank">
                         <button type="button" class="btn">
                             <div class="image-block-3">
                                 <img src="./images/web.png" alt="">
