changes in vcard

--- a/virtual-card.html
+++ b/virtual-card.html
@@ -46,7 +46,7 @@
     <div class="container">
         <div class="qr-section-1">
             <div class="image-block-2 mb-12">
-                <img src="./images/file.jpg" alt="">
+                <img src="./images/nb-logo-write.png" alt="">
             </div>
             <!-- Social 1 -->
             <div class="social-media">
